# Automated-AI-Assessment-Platform-with-CI-CD

./: Dockerfile  Jenkinsfile  README.md  application.py  main.py  pyproject.toml  requirements.txt
manifests/: deployment.yaml
src/config/: settings.py
src/generator/: question_generator.py
src/models/: question_schemas.py
src/utils/: helper.py
