[project]
name = "study-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.8",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "setuptools>=80.10.2",
    "streamlit>=1.54.0",
]
